# analog_daddy

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
.github/: copilot_instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  copilot_instructions.md  feature_request.md
.github/instructions/: basic.instructions.md  basic_instructions.md
analog_daddy/: conf.py  importer.py  look_up.py  utils.py  write_config.py
analog_daddy/dashboard/: __init__.py  __main__.py  app.py  callbacks.py  checklist.md  data_loader.py  debug.py  layout.py  load_lut.py  metadata_utils.py  parse_si.py  plotter.py  selection_tables.py  sidebar.py  test_format_si.py  test_parse_si.py  variable_logic_checker.py
analog_daddy/dashboard/.streamlit/: config.toml
analog_daddy/dashboard/assets/: dash_template.css  dracula.css
docs/: chats_with_chatgpt.md
docs/notebooks/: common_plots_gmid.ipynb  freepdk_45nm_LUT_generation.ipynb  import_demo.ipynb  testbench_setup.ipynb  usage_demo.ipynb  utils_demo.ipynb
sample_files/: GPDK45.csv  GPDK45.npy  expressions_template_to_import.csv
tests/: MVE.csv  test_importer.py  test_look_up.py  test_write_config.py
