[metadata]
name = analog_daddy
version = 2.0.1
author = Siddhant Laddha
author_email = 25705822+siddhantladdha@users.noreply.github.com
description = This library is an attempt to make transistor sizing for Analog Design less painful.
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPLv3
url = https://github.com/siddhantladdha/analog_daddy

[options]
packages = find:
install_requires =
    jupyterlab==4.4.3
    scipy==1.15.2
    numpy==2.3.0
    matplotlib==3.10.3
    dash==3.0.4
    pandas==2.3.0
    # add other runtime dependencies as needed

[options.packages.find]
include =
    analog_daddy*
exclude =
    tests*
[options.package_data]
* = *.csv, *.npy

[options.extras_require]
dev =
    # add other dev dependencies as needed
    twine
    build
